; ModuleID = '/home/carl/AnghaBench/radare2/libr/io/p/extr_io_r2k.c_r2k__read.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/io/p/extr_io_r2k.c_r2k__read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_5__ = type { i32 (i8*)*, i32 }

@r2k_struct = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@IOCTL_READ_KERNEL_MEMORY = common dso_local global i32 0, align 4
@IOCTL_READ_PROCESS_ADDR = common dso_local global i32 0, align 4
@IOCTL_READ_PHYSICAL_ADDR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"ERROR: Undefined beid in r2k__read.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32*, i32*, i32)* @r2k__read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @r2k__read(%struct.TYPE_5__* %0, i32* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @r2k_struct, i32 0, i32 0), align 4
  switch i32 %10, label %44 [
    i32 0, label %11
    i32 1, label %22
    i32 2, label %33
  ]

11:                                               ; preds = %4
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %13 = load i32*, i32** %7, align 8
  %14 = load i32, i32* @IOCTL_READ_KERNEL_MEMORY, align 4
  %15 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @r2k_struct, i32 0, i32 1), align 4
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @ReadMemory(%struct.TYPE_5__* %12, i32* %13, i32 %14, i32 %15, i32 %18, i32* %19, i32 %20)
  store i32 %21, i32* %5, align 4
  br label %53

22:                                               ; preds = %4
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = load i32, i32* @IOCTL_READ_PROCESS_ADDR, align 4
  %26 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @r2k_struct, i32 0, i32 1), align 4
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 8
  %30 = load i32*, i32** %8, align 8
  %31 = load i32, i32* %9, align 4
  %32 = call i32 @ReadMemory(%struct.TYPE_5__* %23, i32* %24, i32 %25, i32 %26, i32 %29, i32* %30, i32 %31)
  store i32 %32, i32* %5, align 4
  br label %53

33:                                               ; preds = %4
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %35 = load i32*, i32** %7, align 8
  %36 = load i32, i32* @IOCTL_READ_PHYSICAL_ADDR, align 4
  %37 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @r2k_struct, i32 0, i32 1), align 4
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 8
  %41 = load i32*, i32** %8, align 8
  %42 = load i32, i32* %9, align 4
  %43 = call i32 @ReadMemory(%struct.TYPE_5__* %34, i32* %35, i32 %36, i32 %37, i32 %40, i32* %41, i32 %42)
  store i32 %43, i32* %5, align 4
  br label %53

44:                                               ; preds = %4
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %46 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %45, i32 0, i32 0
  %47 = load i32 (i8*)*, i32 (i8*)** %46, align 8
  %48 = call i32 %47(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  %49 = load i32*, i32** %8, align 8
  %50 = load i32, i32* %9, align 4
  %51 = call i32 @memset(i32* %49, i32 255, i32 %50)
  %52 = load i32, i32* %9, align 4
  store i32 %52, i32* %5, align 4
  br label %53

53:                                               ; preds = %44, %33, %22, %11
  %54 = load i32, i32* %5, align 4
  ret i32 %54
}

declare dso_local i32 @ReadMemory(%struct.TYPE_5__*, i32*, i32, i32, i32, i32*, i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
